# webserver

./: CMakeLists.txt  README.md  analysisHTTP.c  configure.c  configure.txt  connect.c  main.c
include/: analysisHTTP.h  configure.h  connect.h
root/: test.txt
